# better-cc

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  illuaminate.sexp  package-lock.json  package.json  rollup.config.js  settings.gradle  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql-analysis.yml  gradle.yml  make-doc.sh  make-doc.yml
common/: build.gradle
common/src/main/resources/: BetterCC-common.mixins.json
docs-build/docs/lua/: index.html  index.json  main.css  main.js
docs-build/docs/lua/peripheral/: randomizer fabric.html  randomizer forge.html
docs-build/luaFabricJavadoc/: randomizer fabric.lua
docs-build/luaForgeJavadoc/: randomizer forge.lua
docs-build/rollup/: index.js
docs/other/: index.md
docs/web/: index.tsx
fabric/: build.gradle  gradle.properties
fabric/src/main/resources/: BetterCC.mixins.json  fabric.mod.json
forge/: build.gradle
forge/src/main/resources/: BetterCC.mixins.json  pack.mcmeta
mkdoc_src/: mkdocs.yml
mkdoc_src/docs/: index.md
src/main/programs-source/: .gitignore  CMakeLists.txt  README.md  bettercc-private.c  bettercc-private.h  bettercc.c  bettercc.h  fimexu.c  lshldev.c  redstone.c  seplay.c
src/main/programs-source/devices/: block_operations.c  block_operations.h  energy_storage.c  energy_storage.h  file_import_export.c  file_import_export.h  inventory_operations.c  inventory_operations.h  item_handler.c  item_handler.h  redstone.c  redstone.h  robot.c  robot.h  sound.c  sound.h
src/main/resources/: mixins.better_cc.json  pack.mcmeta
(+999 files in other folders)
